#22 cc overlap fixed

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -384,6 +384,11 @@ body
         }
     }
     
+    // fix for cc overlap
+    video::cue{
+        line-height: 160%;
+    }
+    
     //Fix for MCQ colored X and check
     component question-component mcq-component buttons-marking-icon icon 
     {
